fix: 챌린지 api 수정